--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
     <div>
-       <h3> My first website</h3>
+       <h3> My first blog</h3>
        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque ex, quos quod cupiditate porro ea voluptatem modi accusamus neque aspernatur sit velit saepe eligendi quidem esse deleniti optio molestias corrupti.</p>
     </div>
+    <div>
+        <h3> My second blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque ex, quos quod cupiditate porro ea voluptatem modi accusamus neque aspernatur sit velit saepe eligendi quidem esse deleniti optio molestias corrupti.</p>
+     </div>
+     <div>
+        <h3> My third blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque ex, quos quod cupiditate porro ea voluptatem modi accusamus neque aspernatur sit velit saepe eligendi quidem esse deleniti optio molestias corrupti.</p>
+     </div>
 </body>
 </html>
